[gd_scene load_steps=10 format=3 uid="uid://cd6mkkypkhy3t"]

[ext_resource type="Script" uid="uid://bh3mou62ew8r7" path="res://Scripts/slime.gd" id="1_03y8y"]
[ext_resource type="Texture2D" uid="uid://braqun745thrn" path="res://Assets/slime.png" id="2_404sp"]

[sub_resource type="Animation" id="Animation_lcjm2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_884la"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [84, 85, 86, 87, 88]
}

[sub_resource type="Animation" id="Animation_ncdmt"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_u7ncx"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32, 33]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wxsl1"]
_data = {
&"RESET": SubResource("Animation_lcjm2"),
&"death": SubResource("Animation_884la"),
&"idle": SubResource("Animation_ncdmt"),
&"walk": SubResource("Animation_u7ncx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wod4s"]
size = Vector2(18, 19)

[sub_resource type="CircleShape2D" id="CircleShape2D_wca6g"]
radius = 82.0244

[node name="Slime" type="CharacterBody2D" node_paths=PackedStringArray("_texture", "_animation") groups=["enemy"]]
script = ExtResource("1_03y8y")
_texture = NodePath("Texture")
_animation = NodePath("Animation")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("2_404sp")
hframes = 7
vframes = 13
frame = 7

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wxsl1")
}

[node name="Collision" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_wod4s")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]
show_behind_parent = true
shape = SubResource("CircleShape2D_wca6g")

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
